# llm-behavior-diff

./: .gitignore  AGENT_READY.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-image.yml  model-upgrade-regression.yml  publish-pypi.yml  release-check.yml
docs/: api-reference.md  architecture.md  cli-reference.md  index.md  quickstart.md  release-runbook.md  suite-reference.md
docs/launch-kit/: devto.md  hn-first-comment.md  hn.md
docs/release-notes/: phase-8b-pr-draft.md  phase-8b-release-notes.md
examples/quantization-int8/: README.md  suite.yaml
src/llm_behavior_diff/: __init__.py  aggregator.py  benchmark.py  cli.py  policy.py  runner.py  schema.py  statistics.py
src/llm_behavior_diff/adapters/: __init__.py  anthropic_adapter.py  base.py  litellm_adapter.py  local_adapter.py  openai_adapter.py
src/llm_behavior_diff/comparators/: __init__.py  base.py  behavioral.py  factual.py  factual_external.py  format.py  judge.py  semantic.py
src/llm_behavior_diff/connectors/: __init__.py  base.py  wikipedia.py
src/llm_behavior_diff/profiles/: __init__.py  quantization.py
suites/: coding_tasks.yaml  general_knowledge.yaml  instruction_following.yaml  reasoning.yaml  safety_boundaries.yaml
tests/: __init__.py  conftest.py  test_aggregator.py  test_benchmark.py  test_cli.py  test_dependabot_policy_guard.py  test_diff_quantization.py  test_docs_consistency.py  test_format_quantization_reports.py  test_policy.py  test_quantization_example_suite.py  test_quantization_profile.py  test_runner.py  test_schema.py  test_statistics.py  test_suites.py  test_workflow_model_upgrade_regression.py  test_workflow_node24_guard.py  test_workflow_security_guard.py
tests/adapters/: test_litellm_adapter.py  test_local_adapter.py
tests/comparators/: __init__.py  test_behavioral.py  test_factual.py  test_factual_external.py  test_format.py  test_judge.py  test_semantic.py
tests/fixtures/: __init__.py  sample_suite.yaml
