[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-behavior-diff"
version = "1.0.0"
description = "Behavioral regression testing tool for LLM model upgrades. Compare model versions and detect behavioral changes."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "LLM Behavior Diff Contributors"}
]
keywords = ["llm", "testing", "regression", "model-comparison", "mlops"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "numpy>=1.24.0",
    "sentence-transformers>=2.2.0",
    "httpx>=0.24.0",
    "boto3>=1.34.0",
    "google-cloud-bigquery>=3.25.0",
    "google-cloud-storage>=2.18.0",
    "azure-identity>=1.17.1",
    "azure-storage-blob>=12.22.0",
    "snowflake-connector-python>=3.12.0",
    "redshift-connector>=2.1.3",
    "databricks-sql-connector>=3.5.0",
    "psycopg[binary]>=3.2.0",
    "clickhouse-driver>=0.2.9",
    "pymssql>=2.3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
litellm = [
    "litellm>=1.3.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.7.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
docker = [
    "docker>=6.1.0",
]

[project.scripts]
llm-diff = "llm_behavior_diff.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["llm_behavior_diff*"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "W291",  # trailing whitespace
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
